--- a/nohang-desktop.conf
+++ b/nohang-desktop.conf
@@ -148,7 +148,7 @@ min_sleep = 0.1
     Valid values: True | False
     Default value: True
 
-post_action_gui_notifications = True
+post_action_gui_notifications = False
 
     Key: hide_corrective_action_type
     Description:
@@ -251,7 +251,7 @@ soft_threshold_min_swap = 40 %
     Valid values: from the range [10; 90] %
     Default value: 55 %
 
-soft_threshold_max_zram = 45 %
+soft_threshold_max_zram = 60 %
 
     Key: soft_threshold_max_psi
     Description:
@@ -287,7 +287,7 @@ hard_threshold_min_swap = 35 %
     Valid values: from the range [10; 90] %
     Default value: 60 %
 
-hard_threshold_max_zram = 50 %
+hard_threshold_max_zram = 65 %
 
     Key: hard_threshold_max_psi
     Description:
